# qt5menugen

./: .gitignore  CHANGELOG  CMakeLists.txt  Doxyfile  README.md  TODO.txt  qt5menugen-config.cmake.in  qt5menugen.h  qt5menugen_global.h
example/CombiningMenus/: CMakeLists.txt  common.json  context.json  contextcommon.json  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.qrc  toolbar.json
example/ExampleWindow/: .gitignore  CMakeLists.txt  about.h  about.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.qrc  menugen.json  preferences.h  preferences.ui
example/MenuToButtons/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  toolbar.json
example/ShortcutTester/: CMakeLists.txt  ShortcutTester.pro  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.json
example/ShortcutTester/build-ShortcutTester-Desktop-Debug/: Makefile  moc_mainwindow.cpp  qrc_main.cpp  ui_mainwindow.h
example/ShortcutTester/build-ShortcutTester-Desktop-Debug/ShortcutTester.app/Contents/: Info.plist
example/ShortcutTester/build-ShortcutTester-Desktop-Debug/ShortcutTester.app/Contents/MacOS/: ShortcutTester
qt5menugen/: qt5menugen-config-3.0.2.cmake  qt5menugen-config.cmake
src/: mainpage.dox  qt5menugen.cpp  qt5menugen.h  qt5menugen.pc.in  spec.h  version.h  version.h.in
tests/: CMakeLists.txt  test_json.cpp  test_json.h  test_qwidget_menu.cpp  test_qwidget_menu.h  test_runner.cpp  version.h  version.h.in
